--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,18 @@
 [submodule "third_party/InverseRenderingOfIndoorScene"]
 	path = third_party/InverseRenderingOfIndoorScene
 	url = https://github.com/yuyingyeh/InverseRenderingOfIndoorScene.git
+[submodule "third_party/OptixRenderer"]
+	path = third_party/OptixRenderer
+	url = https://github.com/yuyingyeh/OptixRenderer.git
+[submodule "third_party/OptixRenderer_MatPart"]
+	path = third_party/OptixRenderer_MatPart
+	url = https://github.com/yuyingyeh/OptixRenderer.git
+	branch = matpart
+[submodule "third_party/OptixRenderer_UVcoord"]
+	path = third_party/OptixRenderer_UVcoord
+	url = https://github.com/yuyingyeh/OptixRenderer.git
+	branch = uvcoord
+[submodule "third_party/OptixRenderer_Light"]
+	path = third_party/OptixRenderer_Light
+	url = https://github.com/yuyingyeh/OptixRenderer.git
+	branch = renderLight
