--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "third_party/PerceptualSimilarity"]
 	path = third_party/PerceptualSimilarity
 	url = https://github.com/richzhang/PerceptualSimilarity.git
+[submodule "third_party/diffmat"]
+	path = third_party/diffmat
+	url = https://github.com/yuyingyeh/diffmat.git
